MVP - User Interface Spring Challenge

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <nav class="top-nav">
             <img class="logo" src="img/lambda-black.png">
 
-            <a class="link">Home</a>
+            <a class="link" href="index.html">Home</a>
             <a class="link" href="about.html">About</a>
             <a class="link">Products</a>
             <a class="link">Blog</a>
